# django_grpc_querysets

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup_data.py
grpc_querysets/: grpc_queryset.py  server.py
grpc_querysets/lib/: query.proto  query_pb2.py  query_pb2.pyi  query_pb2_grpc.py
test_app/: models.py  serializers.py  settings.py
test_app/management/commands/: start_grpc_server.py  test_queryset.py
test_app/migrations/: 0001_initial.py  0002_alter_testmodel_f1_alter_testmodel_f2.py  0003_alter_testmodel_my_fk.py
